--- a/invoiceGeneratorByAnkit/styles.css
+++ b/invoiceGeneratorByAnkit/styles.css
@@ -7,20 +7,28 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: #f2f2f2; 
 }
 
 .container {
+  /* margin-top: 30px; */
   width: 90%;
-  height: 90vh;
+  /* height: 90vh; */
+  min-height: 100vh;
   overflow: hidden;
+  
 }
 
 .mainForm {
+  margin-top: 30px;
+  margin-left: 30px;
   display: flex;
   width: 97%;
-  height: 700px;
+  /* height: 700px; */
+  height: 90vh;
   justify-content: space-between;
   align-items: center;
+  border-radius: 10px; 
 }
 
 .row {
@@ -40,7 +48,8 @@ body {
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s;
-  overflow: auto;
+  overflow: auto; 
+  padding: 20px; 
 }
 
 .card1:hover {
@@ -201,4 +210,109 @@ textarea {
 .close:focus {
   color: black;
   text-decoration: none;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="date"] {
+  padding: 8px; 
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+textarea {
+  padding: 8px; 
+  border-radius: 5px; 
+  border: 1px solid #ccc; 
+}
+
+.total-section {
+  margin-left: auto;
+  padding: 20px; 
+  margin-right: 100px; 
+}
+
+.reviewInvoice {
+  background-color: #4caf50; 
+  color: #ffffff;
+  padding: 15px 30px; 
+  font-size: 16px;
+  border: none;
+  border-radius: 5px; 
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.reviewInvoice:hover {
+  background-color: #45a049; 
+}
+
+.section {
+  margin-bottom: 20px; 
+  position: relative;
+}
+
+.section::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -10px; 
+  left: 0;
+  width: 100%;
+  height: 2px; 
+  background-color: #ddd; 
+}
+
+.section:last-child::after {
+  content: none;
+}
+
+
+fieldset legend {
+  background-color: #4CAF50; 
+  color: white; 
+  padding: 8px 12px;
+  border-radius: 8px; 
+}
+
+
+@media only screen and (max-width: 600px) {
+  .mainForm {
+    flex-direction: column; 
+  }
+
+  .mainForm {
+    margin: 10px;
+    overflow-x: auto; 
+  }
+  .card1,
+  .card2 {
+    width: 100%;
+    margin: 0; 
+  }
+}
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  .mainForm {
+    flex-direction: column; 
+    overflow-x: auto;
+  }
+  .mainForm {
+    margin: 15px; 
+  }
+
+  .card1,
+  .card2 {
+    width: 100%; 
+  }
+}
+
+@media only screen and (min-width: 1025px) {
+  .mainForm {
+    flex-direction: row; 
+  }
+
+  .card1,
+  .card2 {
+    width: 48%; 
+  }
 }
