--- a/resumeTemplateByBhumika/resume.css
+++ b/resumeTemplateByBhumika/resume.css
@@ -60,7 +60,7 @@
 }
 .outputcontainer{
     width:65%;
-    height: auto;
+    height: 100%;
     display: flex;
     justify-content: center;
     padding: 1rem;
@@ -145,11 +145,12 @@ select{
 }
 .outputleft{
     width: 40%;
+    max-width: 250px;
     height: 100%;
     background-color: rgb(179, 179, 223);
     padding: 1rem;
     padding-top: 150px;
-    overflow-y: auto;
+    /* border: 2px solid red; */
 }
 .header{
     position:absolute;
@@ -170,10 +171,22 @@ select{
     /* border: 2px solid black; */
 }
 .contact{
+    width: 180px;
     display: flex;
     flex-direction:column;
     gap: 1rem;
     color: rgb(2, 20, 36);
+}
+.contact h4 span{
+    width: 180px;
+    max-width: 180px;
+    word-wrap: break-word;
+    /* border: 2px solid red; */
+}
+.Skillnm{
+    font-weight: bold;
+    font-size: 1rem;
+    color: rgb(228, 22, 22);
 }
 .outputright{ 
     width: 100%;
@@ -186,6 +199,9 @@ select{
     font-size: 1.1rem;
     font-weight: 500;
     color: rgb(4, 46, 30);
+}
+.sumry li{
+    list-style: none;
 }
 .summry{
     padding: 1rem;
@@ -201,7 +217,7 @@ select{
     flex-direction: column;
     gap: 0.5rem;
     width: 80%;
-    height: 100%;
+    /* height: 100%; */
     background-color: rgb(250, 250, 250);
     box-shadow: 0px 3px 10px 3px rgb(8, 8, 8);
 }
@@ -256,4 +272,94 @@ h3{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+.ProjectsDetails{
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.EducationDtls{
+    width: 100%; 
+}
+.ProfessionalExpOne{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.2rem;
+    /* border: 2px solid red; */
+}
+.ProfessionalExpTwo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.2rem;
+    /* border: 2px solid red; */
+}
+.Qualifications{
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.leftinfoOne, .leftinfoTwo{
+    line-height: 2rem;
+    font-size: 1.1rem;
+}
+.timing{
+    display: flex;
+    gap: 1rem;
+}
+.AddProjOne, .AddProjTwo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.2rem;
+}
+.QualificateDtlOne, .QualificateDtlTwo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.2rem;
+}
+/* -------------------------------------------making responsive--------------------------------- */
+@media (min-width:580px) and (max-width:780px) {
+    .basecontainer{
+        display: flex;
+        flex-direction: column;
+    }
+    .container2{
+        width: 100%;
+        justify-content: center;
+        /* border: 2px solid red; */
+    }
+    .outputcontainer{
+        width: 100%;
+        /* border: 2px solid blue; */
+    }
+}
+@media (max-width:579px) {
+    .basecontainer{
+        display: flex;
+        flex-direction: column;
+    }
+    .container2{
+        width: 100%;
+        /* border: 2px solid red; */
+    }
+    .outputcontainer{
+        width: 100%;
+        padding: 0;
+        /* border: 2px solid blue; */
+    }
+    .outputTypOne{
+        width: 100%;
+    }
+    ::-webkit-scrollbar-thumb{
+        background-color: rgb(255, 255, 255);
+        border-radius: 20px;
+    }
+    button{
+        font-size: 1rem;
+    }
 }
