--- a/flipKartByJaitenSahu/style.css
+++ b/flipKartByJaitenSahu/style.css
@@ -12,8 +12,17 @@
     height: 55px;
     background-color: #2874F0;
 }
+.mainNav{
+    margin: auto;
+    max-width: 70%;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 55px;
+    background-color: #2874F0;
+}
 .left{
-    margin-left: 200PX;
+    /* margin-left: 200PX; */
     margin-right: 15px;
     display: flex;
     flex-direction: column;
